# help-me-write

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: release.yml
scripts/: build-icon.js  create-portable.js
src/: index.html  main.js  main.ts  settings.html  settings.js  style.css
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ai.rs  commands.rs  lib.rs  settings.rs
src-tauri/src/accessibility/: macos.rs  mod.rs  windows.rs
